# arbiter-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  arbiter.toml  foundry.toml
.github/workflows/: arbiter.yml  foundry.yml  lint.yaml  rust.yml
contracts/: Counter.sol
fork_example/: WETH.json  test.json  weth_fork_config.toml
simulation/: Cargo.toml
simulation/src/: lib.rs  simulation.rs
simulation/src/bindings/: counter.rs
simulation/src/simulations/: mod.rs
simulation/src/v2_core_bindings/: mod.rs  uniswap_v2_factory.rs  uniswap_v2_pair.rs  uniswap_v2erc20.rs
src/: executor.rs  main.rs  strategies.rs
src/agents/: block_admin.rs  counter_agent.rs  mod.rs  price_changer.rs  token_admin.rs
src/behaviors/: incrementer.rs  mod.rs
src/bindings/: counter.rs  mod.rs  std_invariant.rs  std_style.rs
src/config/: counter.toml  gbm.toml
src/settings/: mod.rs  parameters.rs
src/simulations/: counter.rs  mod.rs  price_path_simulation.rs
src/simulations/example_sim/: mod.rs
src/strategies/: mod.rs
test/: Counter.t.sol
