[package]
name = "arbiter_template"
version = "0.1.0"
edition = "2021"

[dependencies]
arbiter-core = { version = "0.8.0" }
arbiter-bindings = { version = "0.1.0" }
RustQuant = { version = "0.0.38", features = ["seedable"] }
tokio = { version = "1.34.0", features = ["full"] }
ethers = { version = "2.0.10" }
serde_json = { version = "1.0.107" }
serde = { version = "1.0.189", features = ["derive"] }
anyhow = { version = "1.0.75" }
async-trait = "0.1.74"
config = "0.13.3"
clap = { version = "4.4.13", features = ["derive"] }