[package]
name = "arbiter-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
arbiter-core = { version = "0.10.1" }
arbiter-macros = { version = "0.1.1" }
arbiter-engine = { version = "0.2.0" }
tokio = { version = "1.36.0", features = ["full"] }
ethers = { version = "2.0.10" }
serde = { version = "1.0.189", features = ["derive"] }
anyhow = { version = "1.0.79" }
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }