[package]
name = "arbiter-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
arbiter-core = { version = "0.10.3" }
arbiter-macros = { version = "0.1.3" }
arbiter-engine = { version = "0.3.2" }
tokio = { version = "1.36.0", features = ["full"] }
ethers = { version = "2.0.13" }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = { version = "1.0.80" }
async-trait = "0.1.77"
clap = { version = "4.5.4", features = ["derive"] }
